--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body {
     width: 100%;
     height: 93vh;
     position: relative;
-    background: url('https://i.ibb.co/vXqDmnh/background.jpg') no-repeat center center/cover;
+    background: url(https://wallpaperaccess.com/full/1512237.jpg) no-repeat center center/cover;
 }
 
 .showcase::after {
