--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ button {
     height: 100%;
     z-index: 1;
     background: rgba(0, 0, 0, 0.6);
-    box-shadow: inset 120px 100px 250px #000000, inset -120px -100px 250px #000000;
+    box-shadow: inset 120px 100px 250px #211e1e, inset -120px -100px 250px #121111;
 }
 
 .showcase-top {
@@ -117,6 +117,37 @@ button {
     align-items: center;
     text-align: center;
     margin-top: 9rem;
+}
+#videosContainer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 0px;
+    margin: 0px;
+    width: 100%;
+    /* Adjust as needed */
+}
+
+.video-placeholder {
+    box-sizing: border-box;
+    width: calc(50% - 10px);
+    /* Adjust the width as needed, and consider margin/padding */
+    margin-bottom: 20px;
+    /* Adjust the margin as needed */
+}
+
+@media only screen and (max-width: 600px) {
+
+    /* Adjust styles for smaller screens, e.g., phones */
+    #videosContainer {
+        justify-content: center;
+        /* Center items on smaller screens */
+    }
+
+    .video-placeholder {
+        width: calc(50% - 10px);
+        /* Two videos per row on smaller screens */
+    }
 }
 
 .showcase-content h1 {
@@ -181,6 +212,30 @@ button {
 .tab-content-item {
     display: none;
     opacity: 0;
+}
+#search-container{
+    display: flex;
+    width: 100%;
+    margin: 0 auto;
+    height: 30px;
+    position: relative;
+    margin-bottom: 20px;
+    
+}
+#search-input{
+    width: 100%;
+    height: 30px;
+    padding: 0 10px;
+    outline: none;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+    border-radius: 8px;
+    font-size: 14px;
+    transition: all .6s ease;
+    -webkit-transition: all .6s ease;
+    -moz-transition: all .6s ease;
+    -o-transition: all .6s ease;
+    background-color: transparent;
 }
 
 .show {
