--- a/style.css
+++ b/style.css
@@ -206,7 +206,7 @@ h2 {
     font-size: 2em;
     line-height: 1.0em;
     color: rgb(190, 190, 10);
-    background-color: green;
+    background-color: rgb(8, 130, 8);
 }
 button {
     background: var(--primary-color);
@@ -219,7 +219,10 @@ button {
 /* Media Queries */
         @media only screen and (max-width: 600px) {
             h1 {
-                font-size: 1.5em;
+                font-size: 1.3em;
+            }
+            h3 {
+                font-size: 1.0em;
             }
     
             p {
